salesforce/force-app/main/default/objects/Ticket__c/Ticket__c.object-meta.xml
<CustomObject>
    <label>Ticket</label>
    <pluralLabel>Tickets</pluralLabel>
    <nameField>
        <displayFormat>TK-{000000}</displayFormat>
        <label>Ticket Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Entrada adjunta a una reserva. Se le enlaza el PDF emitido por el proveedor.</description>
</CustomObject>