salesforce/force-app/main/default/objects/Ticket__c/fields/Expected_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Visit_Date__c</fullName>
    <label>Expected Visit Date</label>
    <type>Date</type>
</CustomField>