salesforce/force-app/main/default/objects/Ticket__c/fields/Pdf_Date_Error__c.field-meta.xml
<CustomField>
    <fullName>Pdf_Date_Error__c</fullName>
    <label>PDF Date Error</label>
    <type>Text</type>
    <length>255</length>
</CustomField>