salesforce/force-app/main/default/objects/Ticket__c/fields/Pdf_Date_Source__c.field-meta.xml
<CustomField>
    <fullName>Pdf_Date_Source__c</fullName>
    <label>PDF Date Source</label>
    <type>Text</type>
    <length>40</length>
</CustomField>