salesforce/force-app/main/default/objects/Ticket__c/fields/Pdf_Date_Status__c.field-meta.xml
<CustomField>
    <fullName>Pdf_Date_Status__c</fullName>
    <label>PDF Date Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pending</fullName><default>false</default><label>Pending</label></value>
            <value><fullName>Match</fullName><default>false</default><label>Match</label></value>
            <value><fullName>Mismatch</fullName><default>false</default><label>Mismatch</label></value>
            <value><fullName>Not Found</fullName><default>false</default><label>Not Found</label></value>
            <value><fullName>Error</fullName><default>false</default><label>Error</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>