salesforce/force-app/main/default/objects/Ticket__c/fields/Pdf_Detected_Dates__c.field-meta.xml
<CustomField>
    <fullName>Pdf_Detected_Dates__c</fullName>
    <label>PDF Detected Dates</label>
    <type>Text</type>
    <length>255</length>
</CustomField>