salesforce/force-app/main/default/objects/Ticket__c/fields/Pdf_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Pdf_Visit_Date__c</fullName>
    <label>PDF Visit Date</label>
    <type>Date</type>
</CustomField>